# campus-event-backend

./: .gitignore  README.md  pyproject.toml  render.yaml
backend/: database.py  init_db.py  main.py  models.py  schemas.py
backend/auth/: dependencies.py  google_auth.py  jwt_utils.py
backend/routers/: __init__.py  ai.py  auth.py  requests.py  venues.py
backend/utils/: mailer.py
